# btcpay-plugin-arkade

./: .env.regtest  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  NArk.sln  README.md  add-migration.ps1  add-migration.sh  package-lock.json  package.json  release-notes-template.md  setup.ps1  setup.sh  start-test-env.cmd
.run/: BTCPayServer_ Bitcoin-HTTPS-MUTINYNET.run.xml  BTCPayServer_ Bitcoin-HTTPS.run.xml
BTCPayServer.Plugins.ArkPayServer/: ArkPlugin.cs  BTCPayServer.Plugins.ArkPayServer.csproj
BTCPayServer.Plugins.Boltz.Arkade/: ArkPlugin.cs  BTCPayServer.Plugins.Boltz.Arkade.csproj
BoltzClientBindings/: Cargo.toml  README.md  uniffi.toml
BoltzClientBindings/src/: lib.rs  store.rs
Client/: stablecoin-wallet.js
ConfigBuilder/: ConfigBuilder.csproj  Program.cs
NArk.E2E.Tests/: ApiEndpointTests.cs  ArkLightningClientTests.cs  BoardingLifecycleTests.cs  FundedWalletTests.cs  FundingCrashRecoveryTests.cs  GreenfieldBitcoinTests.cs  InvoicePaymentLatencyTests.cs  NArk.E2E.Tests.csproj  NativeStorePostgresTests.cs  OverviewActivityTests.cs  PageRenderTests.cs  PayoutBatchTests.cs  PayoutTests.cs  PlaywrightBaseTest.cs  RestartReconciliationTests.cs  SendWizardBitcoinTests.cs  SettlementConfigurationTests.cs  SettlementTriggerTests.cs  SharedPluginTestFixture.cs  SpendingTests.cs  StablecoinSettlementActivityTests.cs  StablecoinSettlementTests.cs  StablecoinSwapClientTests.cs  StoreOverviewViewModelTests.cs  SwapRefundTests.cs  SwapsTests.cs  UsdSettlementReconciliationStateTests.cs  WalletActivityBuilderTests.cs  WalletRestoreTests.cs  (+1 more)
(+266 files in other folders)
